--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -16,6 +16,9 @@ on:
       test:
         type: string
         required: false
+    secrets:
+      test:
+        required: true        
 jobs:
 
   lambda-deploy:
