--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -32,5 +32,5 @@ jobs:
 
       - name: Update Lambda code & environment variables
         run: |
-          echo ${{ inputs.test }}
+          "Variables={${{ secrets.test }}}"
           "Variables={${{ inputs.lambda-envs }}}"
