--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -28,4 +28,5 @@ jobs:
       - name: Update Lambda code & environment variables
         run: |
          env
-         echo  "Variables={${{ inputs.lambda-envs }}}"
+         
+        # echo  "Variables={${{ inputs.lambda-envs }}}"
