--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -19,6 +19,8 @@ jobs:
   lambda-deploy:
 
     runs-on: ubuntu-latest
+    env:
+     
     environment:
       name: ${{ inputs.environment }}
     steps:
@@ -26,7 +28,5 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Update Lambda code & environment variables
-        run: |
-         env
-         
-        # echo  "Variables={${{ inputs.lambda-envs }}}"
+        run: |       
+         echo  "Variables={${{ github.event.inputs.lambda-envs }}}"
