--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -13,6 +13,9 @@ on:
       lambda-envs:
         type: string
         required: false
+      test:
+        type: string
+        required: false
    
 jobs:
 
@@ -28,4 +31,5 @@ jobs:
 
       - name: Update Lambda code & environment variables
         run: |       
+         echo ${{ inputs.test }}
          echo  "Variables={${{ inputs.lambda-envs }}}"
