--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -31,5 +31,6 @@ jobs:
 
       - name: Update Lambda code & environment variables
         run: |       
+         echo ${{ vars.VAR1 }}
          echo ${{ inputs.test }}
          echo  "Variables={${{ inputs.lambda-envs }}}"
