--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,4 +13,4 @@ jobs:
       app: 'cognito-customize-email-lambda'
       environment: 'development'
       lambda-envs: "VAR1=${{ vars.VAR1 }},VAR2=${{ vars.VAR2 }}"
-      test: '${{ envs.TEST }}'
+      test: '${{ env.TEST }}'
