--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,11 +5,12 @@ on:
     branches:
       - main
 
+env:
+  ENVIRONMENT: development
+
 jobs:
 
   cognito-customize-email-lambda:
-    environment:
-      name: dev
     uses: ./.github/workflows/lambda-image-build-push-deploy-template.yml
     with:
       app: 'cognito-customize-email-lambda'
