--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  ENVIRONMENT: development
-
 jobs:
 
   cognito-customize-email-lambda:
@@ -17,3 +14,16 @@ jobs:
       environment: 'development'
       lambda-envs: "VAR1=${{ vars.VAR1 }},VAR2=${{ vars.VAR2 }}"
       test: '${{ vars.VAR1 }}'
+
+  lambda-deploy:
+
+    runs-on: ubuntu-latest
+    environment:
+      name: ${{ vars.ENVIRONMENT }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Update Lambda code & environment variables
+        run: |    
+         echo ${{ vars.VAR1 }}
+         echo  "Variables={${{ vars.VAR1 }}}"        
