--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -19,10 +19,9 @@ on:
    
 jobs:
 
-  Update-deploy:
+  job1:
 
     runs-on: ubuntu-latest
-    needs: lambda-deploy
     environment:
       name: ${{ inputs.environment }}
     steps:
