--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       app: 'cognito-customize-email-lambda'
       environment: 'development'
       lambda-envs: "VAR1=${{ vars.VAR1 }},VAR2=${{ vars.VAR2 }}"
-      test: '${{ vars.VAR1 }}'
+      envs-name: 'COGNITO_CUSTOMIZE_EMAIL_LAMBDA'
 
   lambda-deploy:
 
