--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -10,7 +10,7 @@ on:
       app:
         type: string
         required: false
-      envs-name:
+      lambda-envs:
         type: string
         required: false
       test:
@@ -32,4 +32,4 @@ jobs:
         run: |    
          echo ${{ vars.VAR1 }}
          echo ${{ inputs.test }}
-         echo ${{ vars."${{ inputs.envs-name }}" }}  
+         echo ${{ inputs.lambda-envs }} 
