--- a/.github/workflows/lambda-image-build-push-deploy-template.yml
+++ b/.github/workflows/lambda-image-build-push-deploy-template.yml
@@ -22,17 +22,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Update Lambda ${{ inputs.app }}
+      - name: Update build ${{ inputs.app }}
         run: | 
-         export ENVS=\
-         VAR1=${{ vars.VAR1 }},\
-         VAR2=${{ vars.VAR2 }}
-         echo $ENVS
+          ls -l
 
-      - name: Update Lambda ${{ inputs.app }}
-        run: | 
-         export ENVS=\
-         VAR1=${{ vars.VAR1 }},\
-         VAR2=${{ vars.VAR2 }},\
-         VAR3=${{ vars.VAR2 }},
-         echo $ENVS
