--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,5 +50,6 @@ jobs:
         run: | 
          export ENVS=\
          VAR1=${{ vars.VAR1 }},\
+         VAR3=${{ vars.VAR1 }},\
          VAR2=${{ vars.VAR2 }}
          echo $ENVS         
