--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,37 +19,37 @@ jobs:
       app: 'cognito-test2-lambda'
       environment: 'development'
 
-  cognito-customize-email-lambda-deploy:
+  # cognito-customize-email-lambda-deploy:
 
-    runs-on: ubuntu-latest
-    environment:
-      name: ${{ inputs.environment }}
-    needs: cognito-customize-email-lambda-build
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: ${{ inputs.environment }}
+  #   needs: cognito-customize-email-lambda-build
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Update cognito-customize-email-lambda
-        run: | 
-         export ENVS=\
-         VAR1=${{ vars.VAR1 }},\
-         VAR2=${{ vars.VAR2 }}
-         echo $ENVS        
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #     - name: Update cognito-customize-email-lambda
+  #       run: | 
+  #        export ENVS=\
+  #        VAR1=${{ vars.VAR1 }},\
+  #        VAR2=${{ vars.VAR2 }}
+  #        echo $ENVS        
 
-  cognito-customize-test-lambda-deploy:
+  # cognito-customize-test-lambda-deploy:
 
-    runs-on: ubuntu-latest
-    environment:
-      name: ${{ inputs.environment }}
-    needs: cognito-customize-test-lambda-build
+  #   runs-on: ubuntu-latest
+  #   environment:
+  #     name: ${{ inputs.environment }}
+  #   needs: cognito-customize-test-lambda-build
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Update cognito-customize-test-lambda
-        run: | 
-         export ENVS=\
-         VAR1=${{ vars.VAR1 }},\
-         VAR3=${{ vars.VAR1 }},\
-         VAR2=${{ vars.VAR2 }}
-         echo $ENVS         
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #     - name: Update cognito-customize-test-lambda
+  #       run: | 
+  #        export ENVS=\
+  #        VAR1=${{ vars.VAR1 }},\
+  #        VAR3=${{ vars.VAR1 }},\
+  #        VAR2=${{ vars.VAR2 }}
+  #        echo $ENVS         
