--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
 
   cognito-customize-email-lambda-deploy:
     env:
-      app: 'cognito-customize-email-lambda'
+      APP: 'cognito-customize-email-lambda'
     runs-on: ubuntu-latest
     environment:
       name: ${{ inputs.environment }}
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Update cognito-customize-email-lambda
         run: | 
-         export ${{ env.app }}
+         export $APP
          export ENVS=\
          VAR1=${{ vars.VAR1 }},\
          VAR2=${{ vars.VAR2 }}
