--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
 
   cognito-customize-email-lambda-deploy:
     runs-on: ubuntu-latest
+    env:
+      APP: Monday
     environment:
       name: development
     needs: cognito-customize-email-lambda-build
