--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,11 @@ on:
 
 jobs:
 
-  cognito-customize-email-lambda-build:
-    uses: ./.github/workflows/lambda-image-build-push-deploy-template.yml
-    with:
-      app: 'cognito-customize-email-lambda'
-      environment: 'development'
+  # cognito-customize-email-lambda-build:
+  #   uses: ./.github/workflows/lambda-image-build-push-deploy-template.yml
+  #   with:
+  #     app: 'cognito-customize-email-lambda'
+  #     environment: 'development'
 
   cognito-customize-email-lambda-deploy:
     runs-on: ubuntu-latest
@@ -19,14 +19,16 @@ jobs:
       app: cognito-customize-email-lambda
     environment:
       name: development
-    needs: cognito-customize-email-lambda-build
+    # needs: cognito-customize-email-lambda-build
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Update cognito-customize-email-lambda
         run: | 
-          export LAMBDA_ENVS=\  
+          export LAMBDA_ENVS=\
+            { \
             VAR1=${{ vars.VAR1 }},\
-            VAR2=${{ vars.VAR2 }}
+            VAR2=${{ vars.VAR2 }},\
+            }
           echo { $LAMBDA_ENVS }  
