--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Update cognito-customize-email-lambda
         run: | 
           export LAMBDA_ENVS=\
-            { \
+            {\
             VAR1=${{ vars.VAR1 }},\
             VAR2=${{ vars.VAR2 }},\
             }
-          echo { $LAMBDA_ENVS }  
+          echo "Variables={ $LAMBDA_ENVS }"
