--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,9 +26,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Update cognito-customize-email-lambda
         run: | 
-          export LAMBDA_ENVS=\
-            {\
+          export LAMBDA_ENVS="{\
             VAR1=${{ vars.VAR1 }},\
             VAR2=${{ vars.VAR2 }},\
-            }
+            }"
           echo "Variables={ $LAMBDA_ENVS }"
