--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
             VAR1=${{ vars.VAR1 }},\
             VAR2=${{ vars.VAR2 }},\
             }"
-          echo "Variables={ $LAMBDA_ENVS }"
+          echo "Variables=$LAMBDA_ENVS"
