--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,6 @@ jobs:
         run: | 
           export LAMBDA_ENVS="{\
           VAR1=${{ vars.VAR1 }},\
-          VAR2=${{ vars.VAR2 }},\
+          VAR2=${{ vars.VAR2 }}\
           }"
           echo "Variables=$LAMBDA_ENVS"
