--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,10 @@ name: DEV Build/Push/Lambda-deploy
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'lambdas/**'
+      - './.github/workflows/ci.yml'
+      - './.github/workflows/lambda-image-build-push-template.yml'
 
 jobs:
 
