--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: DEV Build/Push/Lambda-deploy
 
 on:
   push:
+    branches:
+      - main
     paths:
       - 'lambdas/**'
       - '.github/workflows/ci.yml'
