--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,12 @@ jobs:
         uses: actions/checkout@v4
       - name: Export
         run: | 
-          export VAULTS_SECRETS_DATABASE_URL=postgresql://dbo:HayXBUtEKffcG6FVEoiVDpIH4kHjXaan@che-dev-transaction-gateway.cgz7qeu1xtvk.eu-central-2.rds.amazonaws.com:5432/devtransactiongateway?schema=public
+          export VAULTS_SECRETS_APIDATABASE_URL=postgresql://dbo:HayXBUtEKffcG6FVEoiVDpIH4kHjXaan@che-dev-transaction-gateway.cgz7qeu1xtvk.eu-central-2.rds.amazonaws.com:5432/devtransactiongateway?schema=public
 
       - name: CAT
         run: |
-          SECRET_VAR="VAULTS_SECRETS_DATABASE_URL"
-          echo $SECRET_VAR
+          SECRET_VAR="VAULTS_SECRETS_API"
           export SECRET_DATA=$(env | sed -n "s/^${SECRET_VAR}\(.*\)=\(.*\)/\1: \2/p")
-          echo $SECRET_DATA
-          echo $VAULTS_SECRETS_DATABASE_URL
           yq e --null-input ".secrets = {\"transaction-gateway-${{ inputs.app }}-secret\": {\"data\": strenv(SECRET_DATA)}}" \
           > "secrets.transaction-gateway-api.yaml"
           cat secrets.transaction-gateway-api.yaml
