--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Export
         run: | 
-          export VAULTS_SECRETS_APIDATABASE_URL=postgresql://dbo:HayXBUtEKffcG6FVEoiVDpIH4kHjXaan@che-dev-transaction-gateway.cgz7qeu1xtvk.eu-central-2.rds.amazonaws.com:5432/devtransactiongateway?schema=public
-
+         export VAULTS_SECRETS_APIDATABASE_URL=po
       - name: CAT
         run: |
           SECRET_VAR="VAULTS_SECRETS_API"
