--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,9 @@ jobs:
       #    export VAULTS_SECRETS_APIDATABASE_URL=po
       - name: CAT
         run: |
-          SECRET_VAR="VAULTS_SECRETS_API"
-          export SECRET_DATA=$(env | grep "$SECRET_VAR" | sed 's/\=/\:\ /1; s/"$SECRET_VAR"//' )
+          export APP_UPPER=$(echo "api" | tr '[:lower:]' '[:upper:]')
+          SECRET_VAR="VAULTS_SECRETS_$APP_UPPER"
+          export SECRET_DATA=$(env | grep "$SECRET_VAR" | sed 's/\=/\:\ /1; s/${SECRET_VAR}//' )
           yq e --null-input ".secrets = {\"transaction-gateway-api-secret\": {\"data\": strenv(SECRET_DATA)}}" \
           > "secrets.transaction-gateway-api.yaml"
           cat secrets.transaction-gateway-api.yaml
