--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           export APP_UPPER=$(echo "api" | tr '[:lower:]' '[:upper:]')
           SECRET_VAR="VAULTS_SECRETS_$APP_UPPER"
-          export SECRET_DATA=$(env | grep "$SECRET_VAR" | sed 's/\=/\:\ /1; s/${SECRET_VAR}//' )
+          export SECRET_DATA=$(env | grep "$SECRET_VAR" | sed "s/\=/\:\ /1; s/${SECRET_VAR}//" )
           yq e --null-input ".secrets = {\"transaction-gateway-api-secret\": {\"data\": strenv(SECRET_DATA)}}" \
           > "secrets.transaction-gateway-api.yaml"
           cat secrets.transaction-gateway-api.yaml
