--- a/.github/workflows/build-push-deploy-template.yml
+++ b/.github/workflows/build-push-deploy-template.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Check ENV
+      - name: CREATE ENV
         run: |
           echo 123 >> ./.env
           echo 122133 >> ./.env
