--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './docs/index.html'
+          path: './docs/'
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
