--- a/.github/workflows/build-push-deploy-template.yml
+++ b/.github/workflows/build-push-deploy-template.yml
@@ -40,11 +40,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-
-
   eks-helm-deploy:
 
     runs-on: ubuntu-latest
+    needs: docker-build-and-push
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
