--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,6 +29,7 @@ jobs:
 
   deploy-to-pages:
     runs-on: ubuntu-latest
+    needs: eks-helm-deploy
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
