--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,7 +29,7 @@ jobs:
 
   deploy-to-pages:
     runs-on: ubuntu-latest
-    needs: eks-helm-deploy
+    needs: deploy-to-production
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
