--- a/.github/workflows/bp.yml
+++ b/.github/workflows/bp.yml
@@ -21,7 +21,7 @@ jobs:
     environment: ${{inputs.environment}}
     steps:
       - name: Generate .env file
-        run: echo "${{ secrets.env_vars }}" > .test
+        run: echo "${{ secrets.env_vars }}" > ./.test
 
       - name: Upload .env as artifact
         uses: actions/upload-artifact@v3
