--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+
+env:
+  VAR1: ${{ vars.ENV_VAR }}
+
 jobs:
 
   frontend:
@@ -11,6 +15,6 @@ jobs:
     with:
       environment: 'development'
       app: 'frontend'
-      ENV_VAR: ${{ vars.DEV_ENV_VAR }}
+      ENV_VAR: ${{ env.VAR1 }}
     secrets:
       ENV_SECRET: ${{ secrets.ENV_SECRET }}
