--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -9,9 +9,6 @@ on:
       app:
         type: string
         required: true
-      ENV_VAR:
-        required: false
-        type: string
     secrets:
       ENV_SECRET:
         required: true
@@ -24,4 +21,4 @@ jobs:
       environment: '${{ inputs.environment }}'
     secrets:
       env_vars: |
-        MY_NEXT_VAR: '${{ inputs.ENV_VAR }}'
+        MY_NEXT_VAR: '${{ vars.ENV_VAR }}'
