--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -19,6 +19,8 @@ jobs:
     uses: ./.github/workflows/bp.yml
     with:
       environment: '${{ inputs.environment }}'
-    secrets:
       env_vars: |
         MY_NEXT_VAR: '${{ vars.ENV_VAR }}'
+#    secrets:
+#      env_vars: |
+#        MY_NEXT_VAR: '${{ vars.ENV_VAR }}'
