--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -6,12 +6,6 @@ on:
       environment:
         type: string
         required: true
-      app:
-        type: string
-        required: true
-    secrets:
-      ENV_SECRET:
-        required: true
 
 jobs:
 
@@ -20,7 +14,7 @@ jobs:
     with:
       environment: '${{ inputs.environment }}'
       env_vars: |
-        MY_NEXT_VAR: '${{ vars.ENV_VAR }}'
+        MY_NEXT_VAR_1: ${{ vars.ENV_VAR }}
 #    secrets:
 #      env_vars: |
 #        MY_NEXT_VAR: '${{ vars.ENV_VAR }}'
