--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -6,6 +6,9 @@ on:
       environment:
         type: string
         required: true
+      app:
+        type: string
+        required: true
 
 jobs:
 
