--- a/.github/workflows/bp.yml
+++ b/.github/workflows/bp.yml
@@ -7,12 +7,10 @@ on:
         description: "Environment"
         required: false
         type: string
+    secrets:
       env_vars:
-        type: string
-#    secrets:
-#      env_vars:
-#        description: "Environment variables for .env file"
-#        required: false
+        description: "Environment variables for .env file"
+        required: false
 
 jobs:
   build-and-push:
@@ -21,7 +19,7 @@ jobs:
     environment: ${{ inputs.environment }}
     steps:
       - name: Generate .env file
-        run: echo ${{ inputs.env_vars }} > env
+        run: echo ${{ secrets.env_vars }} > env
 
       - name: Upload .env as artifact
         uses: actions/upload-artifact@v3
