--- a/.github/workflows/bp.yml
+++ b/.github/workflows/bp.yml
@@ -19,7 +19,7 @@ jobs:
     environment: ${{inputs.environment}}
     steps:
       - name: Generate .env file
-        run: echo "${{ inputs.env_vars }}" > env
+        run: echo "${{ secrets.env_vars }}" > env
 
       - name: Upload .env as artifact
         uses: actions/upload-artifact@v3
